# tudelf_kcpa

./: .gitignore  README.md  pyproject.toml
data/KPCA/: KPCA_dat_adj.xlsx  KPCA_dat_adj_irr.xlsx  KPCA_dat_adj_withCosts.xlsx  PCs_TotalError.xlsx
sh_model/: Householdmodel.py  README.md  Simulator.py  WB_Yield.py  WB_Yield_2Buckets.py  Water_availibility.py  crop_cost_compute.py  livestock_costs_compute.py
sh_model/SPSS_WorkDir/: KCPA.py  KPCA.py
src/: Final_Analysis_345_nrh_TijmenData_v4_villageEdit.csv  GetData.py  KPCA.py  PlotRegressionCombined.py  main.py
src/sh_model/: Expenditure.py  Irrigation.py  Net_household_income.py  Simulator.py  WB_Yield.py  WB_Yield_2Buckets.py  crop_cost_balance.py  globalparameters.py  livestock_costs_balance.py
