[tool.poetry]
name = "shmodel_citg_tudelft"
version = "0.1.0"
description = ""
authors = ["Dennis Djohan, Julien Malard-Adam <julien.malard@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.7.13"
scikit-learn = "0.21.2"
matplotlib = "3.4.0"
pandas = {extras = ["xlrd"], version = "^1.2.4"}
statsmodels = "0.12.2"
openpyxl = "^3.0.10"
xlrd = "^2.0.1"
netCDF4 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
