[project]
name = "shmodel_citg_tudelft"
version = "0.1.0"
description = ""
authors =[
    {name = "Julien Malard-Adam", email = "julien.malard@mail.mcgill.ca"},
    {name="Dennis Djohan"}
]
[tool.poetry.dependencies]
python = "^3.7.13"
scikit-learn = "0.21.2"
matplotlib = "3.4.0"
pandas = {extras = ["xlrd"], version = "^1.2.4"}
statsmodels = "0.12.2"
openpyxl = "^3.0.10"
xlrd = "^2.0.1"
netCDF4 = "1.6.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


